2002-05-09  Andy Piper <andy.piper@freeuk.com>

	* THANKS, widgets/e-shell-about-box.c, 
	manuals/anjuta-manual/C/authors.sgml: added new contributors
	* HACKING: updated with info on files to change for credits

2002-05-09  Dan Elphick <dre00r@ecs.soton.ac.uk>

    * src/aneditor.cxx: extended extension list which fixes segfault
    on selecting lisp, ruby or matlab as highlight style.

2002-05-09  Andy Piper <andy.piper@freeuk.com>

	* src/main_menubar_def.h: fixed an array initialiser and fixed
	the lexer settings for the new entries on the Format menu

2002-05-07  Stephane Demurget  <demurgets@free.fr>

	* Synced with Scintilla 1.45

2002-05-06  Andy Piper <andy.piper@freeuk.com>

	* anjuta.prj: added another missing file
	* ChangeLog: fixed some incorrect change dates I caused by 
	sloppy cut-and-pasting :-/

2002-05-06  Andy Piper <andy.piper@freeuk.com>
	
	* src/mainmenu_callbacks.c: fixed title of new About box

2002-05-05  Andy Piper <andy.piper@freeuk.com>

	* src/pixmaps.h: added macros for OpenGL and SDL project icons

2002-05-05  Andy Piper <andy.piper@freeuk.com>

	* pixmaps/appwiz_opengl.png, pixmaps/appwiz_sdl.png: added new files
	* anjuta.prj: updated for new files

2002-05-05  Naba Kumar <kh_naba@users.sourceforge.net>

	* widgets/e-shell-about-box.c: Added version display.
	
2002-05-03  Andy Piper <andy.piper@freeuk.com>

	* launcher/anjuta_launcher.c, src/dnd.c, src/session.c, 
	widgets/scroll_menu.c: fixed up some compiler warnings (patch
	from Philip Van Hoof)

2002-05-03  Andy Piper <andy.piper@freeuk.com>

	* manuals/C/anjuta-tutorial/Makefile.am: removed a circular 
	dependency
	* manuals/ja/anjuta-manual/anjuta-manual.sgml, 
	manuals/ja/anjuta-manual/debugger.sgml: fixed some markup problems 
	that produced build errors (needs checking on a machine with the
	ja locale!)
	* data/properties/lisp.properties: updated to match format of other
	lexer property files supplied with Anjuta

2002-05-03  Andy Piper <andy.piper@freeuk.com>
